Update hero image to animated hands with butterfly GIF

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>SereneNow</h1>
       <p class="tagline">Simplify Your Practice</p>
       <div class="app-preview">
-        <img src="images/app-mockup.png" alt="SereneNow App Interface" class="phone-mockup">
+        <img src="images/serene-hands.gif" alt="SereneNow Logo - Hands holding a butterfly" class="phone-mockup">
         <div class="get-started">
           <button class="btn primary-btn">GET STARTED</button>
         </div>
