--- a/index.html
+++ b/index.html
@@ -155,7 +155,11 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 SereneNow. All rights reserved.</p>
+      <div class="links">
+        <a href="/terms-of-service">Terms of Service</a>
+        <a href="/privacy-policy">Privacy Policy</a>
+      </div>
+      <p class="copyright">&copy; 2025 SereneNow. All rights reserved.</p>
     </div>
   </footer>
 
