Fix Terms of Service link to point to correct file

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           <span>SereneNow</span>
         </div>
         <div class="links">
-          <a href="/terms-of-service">Terms of Service</a>
+          <a href="terms-of-service.html">Terms of Service</a>
           <a href="/privacy-policy">Privacy Policy</a>
         </div>
       </div>
