--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         </div>
         <div class="links">
           <a href="terms-of-service.html">Terms of Service</a>
-          <a href="/privacy-policy">Privacy Policy</a>
+          <a href="privacy-policy.html">Privacy Policy</a>
         </div>
       </div>
       <p class="copyright">&copy; 2025 SereneNow. All rights reserved.</p>
