--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -108,6 +108,8 @@
       <li>Improve our platform and user experience</li>
       <li>Send important updates about our services</li>
       <li>Comply with legal obligations</li>
+      <li>Schedule and manage therapy appointments through calendar integration</li>
+      <li>Facilitate secure video therapy sessions</li>
     </ul>
 
     <h2>3. Payment Processing</h2>
@@ -120,6 +122,8 @@
       <li>Regular security audits and updates</li>
       <li>Strict access controls for user data</li>
       <li>Secure data storage practices</li>
+      <li>End-to-end encryption for video communications</li>
+      <li>Secure OAuth 2.0 implementation for third-party integrations</li>
     </ul>
     <p>While we are currently working towards HIPAA compliance, we maintain high standards of data protection and privacy.</p>
 
@@ -150,7 +154,98 @@
     <h2>9. Changes to Privacy Policy</h2>
     <p>We may update this privacy policy periodically. Users will be notified of significant changes through the app or email.</p>
 
-    <h2>10. Contact Us</h2>
+    <h2>10. Calendar and Video Integration</h2>
+    
+    <h3>Calendar Data Collection and Usage</h3>
+    <p>We collect and process calendar data solely for the purpose of scheduling and managing therapy appointments. This includes:</p>
+    <ul>
+      <li><strong>Calendar Event Data:</strong>
+        <ul>
+          <li>Appointment date and time</li>
+          <li>Duration of the session</li>
+          <li>Participant email addresses (expert and client only)</li>
+          <li>Basic event description (without sensitive medical information)</li>
+        </ul>
+      </li>
+      <li><strong>Usage of Calendar Data:</strong>
+        <ul>
+          <li>Creating and managing therapy appointments</li>
+          <li>Sending calendar invitations</li>
+          <li>Managing expert availability</li>
+          <li>Scheduling system functionality</li>
+        </ul>
+      </li>
+      <li><strong>Calendar Data Retention:</strong>
+        <ul>
+          <li>Calendar event data is retained only for the duration of the therapeutic relationship</li>
+          <li>Users can request deletion of calendar data at any time</li>
+          <li>Automatic deletion of calendar data after service termination</li>
+        </ul>
+      </li>
+    </ul>
+
+    <h3>Video Conferencing Privacy</h3>
+    <p>We utilize Google Meet for secure video therapy sessions:</p>
+    <ul>
+      <li><strong>Video Session Data:</strong>
+        <ul>
+          <li>Meet links are generated uniquely for each session</li>
+          <li>No recording or storage of video sessions</li>
+          <li>No access to video content by our platform</li>
+          <li>Meet links are valid only for the scheduled session duration</li>
+        </ul>
+      </li>
+      <li><strong>Video Session Security:</strong>
+        <ul>
+          <li>All sessions require participant authentication</li>
+          <li>End-to-end encryption for video communications</li>
+          <li>No third-party access to session content</li>
+          <li>No persistent storage of video data</li>
+        </ul>
+      </li>
+      <li><strong>Data Minimization:</strong>
+        <ul>
+          <li>Only essential meeting metadata is processed</li>
+          <li>No collection of video or audio content</li>
+          <li>Temporary storage of meet links only until session completion</li>
+        </ul>
+      </li>
+    </ul>
+
+    <h3>User Rights and Controls for Calendar and Video</h3>
+    <p>Users can:</p>
+    <ul>
+      <li>Control calendar sharing permissions</li>
+      <li>Revoke calendar access at any time</li>
+      <li>Request deletion of calendar data</li>
+      <li>Manage video session preferences</li>
+    </ul>
+    <p>Data Access:</p>
+    <ul>
+      <li>Calendar data accessible only to session participants</li>
+      <li>Video sessions accessible only to authorized participants</li>
+      <li>No sharing of calendar or video data with third parties</li>
+    </ul>
+
+    <h3>Security Measures for Calendar and Video</h3>
+    <ul>
+      <li><strong>Technical Security:</strong>
+        <ul>
+          <li>Encryption of all calendar and video data in transit</li>
+          <li>Secure OAuth 2.0 implementation</li>
+          <li>Regular security audits and updates</li>
+        </ul>
+      </li>
+      <li><strong>Administrative Controls:</strong>
+        <ul>
+          <li>Staff training on data privacy</li>
+          <li>Regular privacy impact assessments</li>
+          <li>Incident response procedures</li>
+        </ul>
+      </li>
+    </ul>
+
+    <h2>11. Contact Us</h2>
     <p>For privacy-related questions or concerns, please contact us at:</p>
     <p>Email: <a href="mailto:admin@serenenow.in">admin@serenenow.in</a><br>
     Address: Pune, Maharashtra, India</p>
