Minor updates to privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -29,7 +29,7 @@
       color: var(--text-color);
     }
 
-    .privacy-content p, 
+    .privacy-content p,
     .privacy-content ul {
       margin-bottom: 20px;
       font-size: 1.1rem;
@@ -95,8 +95,8 @@
     <h2>1. Information We Collect</h2>
     <p>We collect different types of information depending on whether you're using our Expert app or Client app:</p>
     <ul>
-      <li><strong>Expert App Users:</strong> Professional credentials, contact information, practice details, bank account information (for payments), and session records</li>
-      <li><strong>Client App Users:</strong> Basic profile information, contact details, appointment history, and payment information</li>
+      <li><strong>Expert App Users:</strong> Professional credentials, contact information, and bank account information (for payments)</li>
+      <li><strong>Client App Users:</strong> Basic profile information, contact details, emergency contact details, and appointment history</li>
       <li><strong>Usage Data:</strong> App interaction data, device information, and analytics to improve our service</li>
     </ul>
 
@@ -122,7 +122,6 @@
       <li>Regular security audits and updates</li>
       <li>Strict access controls for user data</li>
       <li>Secure data storage practices</li>
-      <li>End-to-end encryption for video communications</li>
       <li>Secure OAuth 2.0 implementation for third-party integrations</li>
     </ul>
     <p>While we are currently working towards HIPAA compliance, we maintain high standards of data protection and privacy.</p>
@@ -155,7 +154,7 @@
     <p>We may update this privacy policy periodically. Users will be notified of significant changes through the app or email.</p>
 
     <h2>10. Calendar and Video Integration</h2>
-    
+
     <h3>Calendar Data Collection and Usage</h3>
     <p>We collect and process calendar data solely for the purpose of scheduling and managing therapy appointments. This includes:</p>
     <ul>
@@ -175,14 +174,6 @@
           <li>Scheduling system functionality</li>
         </ul>
       </li>
-      <li><strong>Calendar Data Retention:</strong>
-        <ul>
-          <li>Calendar event data is retained only for the duration of the therapeutic relationship</li>
-          <li>Users can request deletion of calendar data at any time</li>
-          <li>Automatic deletion of calendar data after service termination</li>
-        </ul>
-      </li>
-    </ul>
 
     <h3>Video Conferencing Privacy</h3>
     <p>We utilize Google Meet for secure video therapy sessions:</p>
@@ -217,32 +208,12 @@
     <ul>
       <li>Control calendar sharing permissions</li>
       <li>Revoke calendar access at any time</li>
-      <li>Request deletion of calendar data</li>
-      <li>Manage video session preferences</li>
     </ul>
     <p>Data Access:</p>
     <ul>
       <li>Calendar data accessible only to session participants</li>
       <li>Video sessions accessible only to authorized participants</li>
       <li>No sharing of calendar or video data with third parties</li>
-    </ul>
-
-    <h3>Security Measures for Calendar and Video</h3>
-    <ul>
-      <li><strong>Technical Security:</strong>
-        <ul>
-          <li>Encryption of all calendar and video data in transit</li>
-          <li>Secure OAuth 2.0 implementation</li>
-          <li>Regular security audits and updates</li>
-        </ul>
-      </li>
-      <li><strong>Administrative Controls:</strong>
-        <ul>
-          <li>Staff training on data privacy</li>
-          <li>Regular privacy impact assessments</li>
-          <li>Incident response procedures</li>
-        </ul>
-      </li>
     </ul>
 
     <h2>11. Contact Us</h2>
@@ -269,4 +240,4 @@
     </div>
   </footer>
 </body>
-</html> 
+</html>
