--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
   </section>
 
-  <section class="faq">
+  <section id="faq" class="faq">
     <div class="container">
       <h2>FAQ</h2>
       
